app/assets/stylesheets/shared/footer.scss
.footer {
  overflow: hidden;
  padding: 30px 30px;
  color: rgb(255, 255, 255);
  background-color: rgb(94, 97, 249);
}

.footer .row {
  margin-left: auto;
  margin-right: auto;
  max-width: 1000px;
}

.footer a {
  text-align: center;
  padding: 12px;
}

.footer a:hover {
  text-decoration: none;
}

.footer a.logo {
  font-size: 25px;
  font-weight: bold;
}

.footer-info a {
  font-size: 14px;
  font-weight: bold;
  color: rgb(255, 255, 255);
}

.footer-legal {
  margin-top: 10px;
}

.footer-legal a {
  font-size: 10px;
  font-weight: bold;
  color: rgb(255, 255, 255);
}

.footer-links {
  text-align: right;
}

